# secret-mafia-agent

./: .gitignore  LICENSE  example_start_vllm.sh  pyproject.toml
src/mindgames/: arena.py  constants.py  database.py  prompts.py  run_in_prod.py
src/mindgames/agents/: __init__.py  basic.py
src/mindgames/backend/: README.md  __init__.py  app.py  main.py  routes.py  schemas.py  test_api.py
src/mindgames/db/: README.md  __init__.py  example.py  models.py  repository.py  session.py
src/mindgames/envs/: README.md
src/mindgames/envs/codenames/: env.py
src/mindgames/envs/colonel_blotto/: env.py  renderer.py
src/mindgames/envs/secret_mafia/: env.py  renderer.py
src/mindgames/envs/three_player_ipd/: env.py
