[project]
name = "mindgames"
version = "0.1.0"
description = "Package for NeurIPS 2025 mind games competition"
readme = "README.md"
authors = [{ name = "moss", email = "moss@banay.me" }]
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.10.0",
    "fastapi>=0.115.0",
    "matplotlib>=3.10.6",
    "modal>=1.1.4",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "rich>=14.1.0",
    "sqlalchemy>=2.0.43",
    "textarena>=0.7.3",
    "textual>=6.1.0",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
    "trueskill>=0.4.5",
    "uvicorn>=0.32.0",
    "vllm>=0.11.0",
]

[project.scripts]
mindgames = "mindgames:cli"
mindgames-server = "mindgames.backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.18.1",
    "pandas-stubs>=2.3.2.250827",
    "ruff>=0.13.0",
    "types-tqdm>=4.67.0.20250809",
]

[tool.mypy]
# Basic mypy configuration
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

# Ignore missing imports for external libraries without stubs
[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "textarena.*",
    "nltk.*",
    "textual.*",
    "tiktoken.*",
    "rich.*",
    "numpy.*",
]
ignore_missing_imports = true
